# avo-events-archived

./: .dockerignore  .env.example  .flake8  Dockerfile  Makefile  README.md  config.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: app.py  main.py
app/api/: api.py
app/api/routers/: event.py  health.py
app/core/: event_handler.py  events_parser.py  xml_transformer.py
app/models/: premis_events.py  xml_body.py
app/resources/: transform.xslt
app/services/: mediahaven.py
openshift/: Jenkinsfile  Makefile  avo-events-archived-multibranch-pipeline.xml  avo-events-archived-template.yml
tests/: conftest.py  test_avo_events_archived.py
tests/api/: test_api.py
tests/core/: test_events_handler.py  test_events_parser.py  test_xml_transformer.py
tests/resources/: __init__.py  mh_api_responses.py  premis_events.py  single_premis_event_archived_on_disk.xml  transformation_results.py
tests/resources/mh_api_responses/: fragment_info.json  fragment_info.xml  query_result_multiple_results.json  query_result_multiple_results.xml  query_result_multiple_results_3.json  query_result_multiple_results_record_types.json  query_result_no_result.json  query_result_no_result.xml  query_result_single_result.json  query_result_single_result.xml
tests/resources/premis_events/: single_premis_event_empty_detail.xml
tests/resources/transformation_results/: sidecar.xml
