[tool.poetry]
name = "avo-events-archived"
version = "0.1.0"
description = ""
authors = ["rudolf <rudolf.degeijter@meemoo.be>"]

[tool.poetry.dependencies]
python = "^3.6"
uvicorn = {extras = ["standard"], version = "^0.13.3"}
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
