[tool.poetry]
name = "avo-events-archived"
version = "0.1.0"
description = ""
authors = ["rudolf <rudolf.degeijter@meemoo.be>"]

[tool.poetry.dependencies]
python = "^3.6"
uvicorn = {extras = ["standard"], version = "^0.13.3"}
fastapi = "^0.63.0"
lxml = "^4.6.2"
requests = "^2.25.1"
viaa-chassis = {version = "^0.1.3", allow-prereleases = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
pytest-mock = "^3.5.1"
mypy = "^0.800"
isort = "^5.7.0"
bandit = "^1.7.0"
autoflake = "^1.4"
pytest-cov = "^2.11.1"

[[tool.poetry.source]]
name = "meemoo"
url = "http://do-prd-mvn-01.do.viaa.be:8081/repository/pypi-all/simple/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
